# sce

./: .gitmodules  LICENSE  README.md  sce.proto
.github/workflows/: engine_tests.yml
examples/: test.c
sce/: Cargo.toml  build.rs
sce/src/: engine.rs  engine_config.rs  guess_language.rs  lib.rs  main.rs  traverse.rs
sce/tests/: lang_tests.rs  slicer_input.json
sce/tests/files/: example2.c  inline1-1.c  inline1-2.c  inline2-1.c  inline_example1.c  inline_example2.c  slice1-2.c  slice2-1.c
slicer/: Cargo.toml  build.rs
slicer/src/: guess_language.rs  lib.rs  main.rs  slicer.rs  slicer_config.rs  traverse.rs
slicer/tests/: lang_tests.rs
slicer/tests/files/: example1.c  inline1-1.c  inline1-2.c  slice1-1.c  slice1.c  slice2.c
vim/: Makefile  sce.py  sce.vim  sce_pb2.py  sce_pb2_grpc.py  slicer.vim  source_slicer.py
vscode/sce/: README.md  package.json
vscode/sce/src/: extension.ts
vscode/sce/src/proto/: sce.client.ts  sce.ts
vscode/sce/src/proto/sce/: InlineRequest.ts  InlineResponse.ts  Point.ts  Range.ts  SCE.ts  SliceDirection.ts  SliceRequest.ts  SliceResponse.ts  Source.ts
vscode/source-slicer/: CHANGELOG.md  README.md  package.json
vscode/source-slicer/src/: extension.ts
