[package]
name = "sce"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
cc = "1.0.73"
rayon = "1.5.2"
tonic-build = "0.8"

[dev-dependencies]
pretty_assertions = "1.2.1"
datatest = "0.7.1"

[lib]
path = "src/lib.rs"
