[package]
name = "slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20.7"
tree-sitter-c = "0.20.1"
tree-sitter-cpp = "0.20.0"
tree-sitter-c-sharp = "0.19.1"
tree-sitter-go = "0.19.1"
tree-sitter-java = "0.19.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-python = "0.20.1"
tree-sitter-ruby = "0.19.0"
tree-sitter-rust = "0.20.1"
tree-sitter-typescript = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
